feat(knowledge-rag): implement hybrid search with RRF, wiki graph context, and gemini-powered image extraction & captioning